Fix autocomplete appearing behind resize gutters

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -73,7 +73,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	position: relative;
-	z-index: 20;
+	z-index: 9;
 	border: 0px solid transparent;
 	background-clip: padding-box;
 }
